@@ -22,6 +22,17 @@ import re
 import string
 import sys
 
+import __builtin__
+try:
+    __builtin__.zip
+except AttributeError:
+    def zip(*lists):
+        result = []
+        for i in xrange(len(lists[0])):
+            result.append(tuple(map(lambda l, i=i: l[i], lists)))
+        return result
+    __builtin__.zip = zip
+
 from TestCommon import *
 from TestCommon import __all__
 
